word wrap fix

--- a/src/components/ECNav.css
+++ b/src/components/ECNav.css
@@ -14,6 +14,7 @@
     justify-content: center;
     padding-right: 0.5rem;
     padding-left: 0.5rem;
+    white-space:nowrap
 }
 
 .navbar .nav-item {
